fix(header): disable scroll on iOS < 16.2

--- a/okp4-gatsby/src/assets/styles/transversals/_global.scss
+++ b/okp4-gatsby/src/assets/styles/transversals/_global.scss
@@ -1,3 +1,11 @@
+html {
+  &.scroll-disabled {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
+}
+
 body {
   // background: url("/images/grain.png"), $nightblue;
   background: $nightblue;
